Added link to github

--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@
     </div>
 
     <img src="img/weather.jpg" alt="Weather" />
+    <div id="sourceLink">
+    <a  href="https://github.com/OksanaHash/mywea" target="_blank">Open-source code</a>
+    , by Oksana Hashemi
+  </div>
     <script src="src/index.js"></script>
   </body>
 </html>
