Added week forecast HTML and CSS

--- a/index.html
+++ b/index.html
@@ -103,30 +103,21 @@
         </div>
       </div>
       <br />
-      <div class="row text-center">
-        <div class="col-1"></div>
-        <div class="col-2 day">
-          Monday <br />
-          22 C
+      <div class="week-forecast">
+        <div class="row text-center">
+          <div class="col-2 day">
+            <div class="week-forecast-date">Monday</div>
+            <img
+              src="http://openweathermap.org/img/wn/04d@2x.png"
+              alt="Clear"
+              width="36"
+            />
+            <div class="week-forecast-temps">
+              <span class="week-forecast-temp-max"> 22°C</span>
+              <span class="week-forecast-temp-min">18°C</span>
+            </div>
+          </div>
         </div>
-        <div class="col-2 day">
-          Tuesday <br />
-          21 C
-        </div>
-        <div class="col-2 day">
-          Wednesday <br />
-          23 C
-        </div>
-        <div class="col-2 day">
-          Thursday <br />
-          22 C
-        </div>
-
-        <div class="col-2">
-          Friday <br />
-          33 C
-        </div>
-        <div class="col-1"></div>
       </div>
     </div>
 
