Add week forecast structure to JS

--- a/index.html
+++ b/index.html
@@ -103,22 +103,7 @@
         </div>
       </div>
       <br />
-      <div class="week-forecast">
-        <div class="row text-center">
-          <div class="col-2 day">
-            <div class="week-forecast-date">Monday</div>
-            <img
-              src="http://openweathermap.org/img/wn/04d@2x.png"
-              alt="Clear"
-              width="36"
-            />
-            <div class="week-forecast-temps">
-              <span class="week-forecast-temp-max"> 22°C</span>
-              <span class="week-forecast-temp-min">18°C</span>
-            </div>
-          </div>
-        </div>
-      </div>
+      <div class="week-forecast" id="forecast"></div>
     </div>
 
     <img src="img/weather.jpg" alt="Weather" />
