--- a/index.html
+++ b/index.html
@@ -53,10 +53,7 @@
         <div class="col-3 fs-1 text-center fw-bold">
           <h2>
             <span class="temperature" id="temperature">19</span>
-            <span class="units">
-              <a href="#" id="celsius-link">°C</a> |
-              <a href="#" id="fahrenheit-link">°F</a>
-            </span>
+            <span class="units">°C </span>
           </h2>
         </div>
         <div class="col-3 fs-5 text-center">
