--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
         <div class="col-2 fs-5">
           <h2>
             Wind<br />
-            <span id="wind">12.2</span> km/h
+            <span id="wind">12.2</span> m/s
           </h2>
         </div>
         <div class="col-2 fs-5 align-middle">
           <h2>
             Visibility<br />
-            <span id="visibility">12</span> km
+            <span id="visibility">1</span> km
           </h2>
         </div>
       </div>
