--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
       <div class="row">
         <div class="col-6 text-center">
-          <span id="city-name">Berlin</span>
+          <span id="city-name">Kyiv</span>
         </div>
         <div class="col-2 text-center">
           <span class="temperature" id="temperature"> 19°C </span>
